<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="quan_tri_vien">Quản Trị Viên</string>
    <string name="nguoi_dung">Người Dùng</string>
    <string name="dang_ky_tai_khoan">Đăng Ký Tài Khoản</string>
    <string name="da_co_tai_khoan">Đã có tài khoản?</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="food_name">Tên món ăn(*)</string>
    <string name="hint_name">Tên</string>
    <string name="food_description">Mô tả món ăn(*)</string>
    <string name="hint_description">Mô tả</string>
    <string name="food_price">Giá món ăn(*)</string>
    <string name="hint_price">Giá</string>
    <string name="currency_food">000 vnđ</string>
    <string name="food_discount">Khuyến mại(*)</string>
    <string name="hint_discount">Khuyến mại</string>
    <string name="percent">%</string>
    <string name="food_image">Link ảnh món ăn(*)</string>
    <string name="hint_image">Link ảnh</string>
    <string name="food_image_banner">Link ảnh banner(*)</string>
    <string name="hint_image_banner">Link ảnh banner</string>
    <string name="popular">Phổ biến</string>
    <string name="food_image_other">Link các hình ảnh khác</string>
    <string name="food_image_other_note">Phân tách với nhau bằng dấu (;)</string>
    <string name="hint_image_other">Hình ảnh khác</string>
    <string name="action_add">Thêm</string>
    <string name="edit_food">Chỉnh sửa món ăn</string>
    <string name="action_edit">Cập nhật</string>
    <string name="add_food">Thêm mới món ăn</string>
    <string name="msg_name_food_require">Vui lòng nhập tên món ăn</string>
    <string name="msg_description_food_require">Vui lòng nhập mô tả về món ăn</string>
    <string name="msg_price_food_require">Vui lòng nhập giá của món ăn</string>
    <string name="msg_discount_food_require">Vui lòng nhập % khuyến mại</string>
    <string name="msg_image_food_require">Vui lòng nhập link ảnh món ăn</string>
    <string name="msg_image_banner_food_require">Vui lòng nhập link ảnh banner</string>
    <string name="msg_edit_food_success">Chỉnh sửa thông tin món ăn thành công</string>
    <string name="msg_add_food_success">Thêm món ăn thành công</string>
    <string name="hint_search_name">Nhập tên món ăn</string>
    <string name="food_suggest">Gợi ý món ăn</string>
    <string name="price_label">Giá:</string>
    <string name="description_label">Mô tả</string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="food_detail_title">Chi tiết món ăn</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="label_sub">-</string>
    <string name="label_quantity_1">1</string>
    <string name="label_add">+</string>
    <string name="cancel">Huỷ bỏ</string>
    <string name="label_date_from">Từ ngày:</string>
    <string name="label_date_to">Đến ngày:</string>
    <string name="label_total_revenue">Doanh thu</string>
    <string name="label_id">Mã đơn hàng:</string>
    <string name="label_date">Ngày đặt:</string>
    <string name="total">Tổng tiền:</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="hint_password_old">Nhập mật khẩu cũ</string>
    <string name="hint_password_new">Nhập mật khẩu mới</string>
    <string name="hint_password_confirm">Xác nhận mật khẩu mới</string>
    <string name="msg_old_password_require">Vui lòng nhập mật khẩu cũ</string>
    <string name="msg_new_password_require">Vui lòng nhập mật khẩu mới</string>
    <string name="msg_confirm_password_require">Vui lòng xác nhận mật khẩu mới</string>
    <string name="msg_old_password_invalid">Mật khẩu cũ không chính xác\nVui lòng nhập lại</string>
    <string name="msg_confirm_password_invalid">Mật khẩu mới không trùng khớp</string>
    <string name="msg_new_password_invalid">Mật khẩu mới phải khác mật khẩu cũ</string>
    <string name="label_payment">Thanh toán:</string>
    <string name="label_menu">Thực đơn:</string>
    <string name="label_address">Địa chỉ nhận:</string>
    <string name="label_phone">Số điện thoại:</string>
    <string name="label_name">Họ tên:</string>
    <string name="label_email">Email:</string>
    <string name="delete">Xoá</string>
    <string name="label_price_0">0 vnđ</string>
    <string name="order_cart">Đặt hàng</string>
    <string name="confirm_delete_food">Xác nhận xoá khỏi giỏ hàng</string>
    <string name="message_delete_food">Bạn có chắc chắn muốn xoá món ăn này không?</string>
    <string name="dialog_cancel">Huỷ bỏ</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>
    <string name="feedback_name">Họ và tên(*)</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="label_facebook">FaceBook</string>
    <string name="label_call">Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_zalo">Zalo</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_comment">Bình luận(*)</string>
    <string name="send_feedback">Gửi phản hồi</string>
    <string name="report">Báo cáo doanh thu:</string>
    <string name="sign_out">Đăng xuất</string>
</resources>